--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^6.0.6",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts-ts": "2.17.0"
+    "react-redux": "^5.0.7",
+    "react-scripts-ts": "2.17.0",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -18,6 +21,8 @@
     "@types/node": "^10.9.3",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "typescript": "^3.0.3"
   }
 }
